lib/tests/fixtures/compiler/parser/next_at_top.baseline
Error: next_at_top.pp:1:1: next statement must be used from within a block.
  next
  ^~~~
